:bug: fix: scrollbar background

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -23,6 +23,7 @@ input button {
 /* Chrome, Edge, and Safari */
 *::-webkit-scrollbar {
   width: 6px;
+  @apply bg-gray-800;
 }
 
 *::-webkit-scrollbar-track {
